add username container

--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -9,13 +9,15 @@
         <header>
             <h1>VOICE<br>TUNES</h1>
         </header>
-        <main>
+        <main id = "main-container">
             <section id = "username-container">
-                <h3>Enter a username</h3>
-                <!-- INPUT USERNAME FIELD -->
-            </section>
-            <section id = "main-container">
+                <div id = "username-dropdown-container">
+                </div>
+                <div id = "username-form-container">
+                </div>
             </section>
         </main>
+    
+    <script type="text/javascript" src="src/index.js"></script>
     </body>
 <html>
