--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -16,6 +16,10 @@
                 <div id = "username-form-container">
                 </div>
             </section>
+            <section id = "recording-container">
+            </section>
+            <section id = "history-container">
+            </section>
         </main>
     <script type="text/javascript" src="src/index.js"></script>
     </body>
