add in http meta tag

--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -17,6 +17,9 @@
                 </div>
             </section>
             <section id = "recording-container">
+                <div id="modelLoading">
+                    <span>Loading model...</span>
+                  </div>
             </section>
             <section id = "history-container">
             </section>
