--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Voice Tunes</title>
         <link rel="stylesheet" href="styles.css">
     </head>
