--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <title>Voice Tunes</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Voice Tunes</title>
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
         <link rel="stylesheet" href="styles.css">
+        <!-- Includes Magenta models and js library -->
+        <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.2"></script> 
+        <!-- Script is executed when the page has finished parsing -->
+        <script type="text/javascript" src="src/index.js" defer></script>
     </head>
     <body>
         <header>
             <h1>VOICE<br>TUNES</h1>
         </header>
         <main id = "main-container">
+
             <section id = "username-container">
                 <div id = "username-dropdown-container">
                 </div>
                 <div id = "username-form-container">
                 </div>
             </section>
+            
             <section id = "recording-container">
                 <div id="modelLoading">
                     <span>Loading model...</span>
-                  </div>
+                </div>
             </section>
+
             <section id = "history-container">
             </section>
         </main>
-    <script type="text/javascript" src="src/index.js"></script>
+
+        <!-- Do not think ths is needed since you will not be creating polyfill
+        <script>
+            if (!window.MediaRecorder) {
+               document.write(decodeURI('%3Cscript src="./polyfill.js">%3C/script>'))
+            }
+        </script> -->
+
+        <!-- Allows user to download files -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js" defer></script>
     </body>
 <html>
