--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -87,8 +87,8 @@
 
                 <div class="saveContainer" id="saveContainer" hidden>
                     <input type="text" name="recordingName" id="inputRecordingName" placeholder="Recording name">
-                    <button class="button save" onclick="saveMidiToComputer(event)" id="saveToComputerBtn">SAVE TO COMPUTER</button>
-                    <button class="button save" onclick="saveMidiToApp(event)" id="saveToAppBtn">SAVE TO APP</button>
+                    <button class="button save" onclick="saveMidi(event)" id="saveToComputerBtn">SAVE TO COMPUTER</button>
+                    <button class="button save" onclick="saveMidi(event)" id="saveToAppBtn">SAVE TO APP</button>
                     <button class="button cancel" onclick="cancelMidi(event)" id="cancelBtn">CANCEL</button>
                 </div>
 
