--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -12,11 +12,16 @@
               location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
         </script> -->
         <!-- Includes Magenta models and js library -->
-        <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.2"></script> 
+        <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.21"></script> 
         <!-- Script is executed when the page has finished parsing -->
         <script type="text/javascript" src="src/index.js" defer></script>
+
+        <script src="https://apis.google.com/js/api.js"></script>
+
+
     </head>
     <body>
+        <div id="puppy">
         <header>
             <h1>VOICE<br>TUNES</h1>
         </header>
@@ -41,6 +46,10 @@
                 </div>
             </section>
             
+            <!-- DELETE BELOW CODE LATER -->
+            <button onclick="playMe(event)">Play</button>
+            <a href="https://storage.googleapis.com/voice-tunes-midi-files/1r3lz7tm2nhv8rwrc0hhk01nqlyn" download>Test</a>
+
             <section id = "recordingContainer">
                 <div id= "modelLoading">
                     <span>Loading model...</span>
@@ -94,7 +103,7 @@
 
             </section>
 
-            <section id = "historyContainer">
+            <section id = "historyContainer" hidden>
             </sction>
 
         </main>
