update history container

--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -63,8 +63,7 @@
                 </div>
 
                 <div id="transcribingMessage" hidden>
-                    Longer audio takes a fair bit to transcribe, and will make your browser sluggish. Please hold while 
-                    your robots are hard at work...
+                    Loading audio...
                     
                     <div id="safariWarning" hidden><br><br>It looks like you're using Safari! Unfortunately because of a 
                       <a href="https://github.com/WebKit/webkit/blob/4a4870b75b95a836b516163d45a5cbd6f5222562/Source/WebCore/Modules/webaudio/AudioContext.cpp#L109">WebKit bug</a>, 
