update rec play methods

--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -72,6 +72,7 @@
                 </div>
 
                 <div class="visualizerContainer" id="visualizerContainer" hidden>
+                    <div id="visualizerName" hidden></div>
                     <canvas id="canvas"></canvas>
                 </div>
         
@@ -92,7 +93,7 @@
                     <input type="text" name="recordingName" id="inputRecordingName" placeholder="Recording name">
                     <button class="button save" onclick="saveMidi(event)" id="saveToComputerBtn">SAVE TO COMPUTER</button>
                     <button class="button save" onclick="saveMidi(event)" id="saveToAppBtn">SAVE TO APP</button>
-                    <button class="button cancel" onclick="cancelMidi(event)" id="cancelBtn">CANCEL</button>
+                    <button class="button cancel" onclick="cancelMidi(event)" id="cancelBtn">GO BACK</button>
                 </div>
 
             </section>
