--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -119,7 +119,8 @@
 
 
                 <div class="visualizerContainer" id="visualizerContainerHistory" hidden>
-                    
+                    <img class="closeBtn" id="closeBtn" src= "close-1.png" title= "Close" alt="Close recording">
+
                     <div class="transcribingMessage" id="transcribingMessageHistory" hidden>
                         loading audio
                     </div>
