--- a/voice-tunes-frontend/index.html
+++ b/voice-tunes-frontend/index.html
@@ -102,8 +102,8 @@
                 <div class="saveContainer" id="saveContainer" hidden>
                     <div id="saveGrid">
                         <input type="text" name="recordingName" id="inputRecordingName" placeholder="Enter a recording name">
-                        <input type="image" src="save-app.png" title= "Save to App" alt="Save to App" class="button save" onclick="saveMidi(event)" id="saveToAppBtn">
-                        <input type="image" src="save-comp-1.png" title= "Save to Computer" alt="Save to Computer" class="button save" onclick="saveMidi(event)" id="saveToComputerBtn">
+                        <input type="image" src="save-app.png" title= "Save MIDI to app" alt="Save to App" class="button save" onclick="saveMidi(event)" id="saveToAppBtn">
+                        <input type="image" src="save-comp-1.png" title= "Save MIDI to computer" alt="Save to Computer" class="button save" onclick="saveMidi(event)" id="saveToComputerBtn">
                     </div>
                     <hr id="hrSaveAfter">
                 </div>
